--- a/mobileapp/pubspec.yaml
+++ b/mobileapp/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   material_design_icons_flutter: 3.2.4495
+  flutter_icons: ^0.3.1
   
 
 dev_dependencies:
