--- a/Frontend/src/tsconfig.app.json
+++ b/Frontend/src/tsconfig.app.json
@@ -2,10 +2,13 @@
   "extends": "../tsconfig.json",
   "compilerOptions": {
     "outDir": "../out-tsc/app",
-    "module": "es2015",
     "baseUrl": "",
     "types": []
   },
+  "include": [
+    "**/*.ts"
+  ],
+  
   "exclude": [
     "test.ts",
     "**/*.spec.ts"
