--- a/mobileapp/pubspec.yaml
+++ b/mobileapp/pubspec.yaml
@@ -31,6 +31,9 @@ dependencies:
   font_awesome_flutter: ^8.5.0
   logger: ^0.7.0+2
   charts_flutter: ^0.8.1
+  sqflite: any
+  path_provider: any
+  intl: any
   
 
 dev_dependencies:
