--- a/mobileapp/pubspec.yaml
+++ b/mobileapp/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   image_picker: any
   image: ^2.1.10
   easy_localization: ^1.3.1
+  webview_flutter: ^0.3.17
 
 dev_dependencies:
   flutter_test:
@@ -58,6 +59,7 @@ flutter:
     - images/mother.png
     - assets/si-SL.json
     - assets/en-US.json
+    - html/
 
   # To add assets to your application, add an assets section, like this:
   # assets:
