--- a/mobileapp/pubspec.yaml
+++ b/mobileapp/pubspec.yaml
@@ -35,7 +35,7 @@ dependencies:
   path_provider: any
   intl: any
   image_picker: any
-  image: ^2.1.10
+  image: any
   easy_localization: ^1.3.1
   webview_flutter: ^0.3.17
   js: ^0.6.0
