--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -32,6 +32,7 @@
     "@angular/router": "8.0.0",
     "@ngx-translate/core": "^11.0.1",
     "@ngx-translate/http-loader": "^4.0.0",
+    "@rxweb/reactive-form-validators": "^1.9.9-beta1",
     "ajv": "6.10.0",
     "arrive": "2.4.1",
     "bootstrap": "4.3.1",
