--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -45,6 +45,7 @@
     "express": "4.17.1",
     "googleapis": "40.0.0",
     "hammerjs": "2.0.8",
+    "html2pdf.js": "^0.9.1",
     "jquery": "3.4.1",
     "moment": "2.24.0",
     "perfect-scrollbar": "1.1.0",
