--- a/mobileapp/pubspec.yaml
+++ b/mobileapp/pubspec.yaml
@@ -61,6 +61,7 @@ flutter:
     - assets/si-SL.json
     - assets/en-US.json
     - html/
+    - basicinfo.jpeg
 
   # To add assets to your application, add an assets section, like this:
   # assets:
