--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -47,6 +47,7 @@
     "hammerjs": "2.0.8",
     "html2pdf.js": "^0.9.1",
     "jquery": "3.4.1",
+    "jwt-decode": "^2.2.0",
     "moment": "2.24.0",
     "perfect-scrollbar": "1.1.0",
     "popper.js": "1.15.0",
